(feat/bytestore) implements and tests OnHeapByteStore